--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello 
+<head></head>
+  <<body>
+  <!DOCTYPE html>
+ <title>Hello</title>
+ <h1>About me</h1>
+<p>  my name is juan herrera
+  but my artist name is BiZaRrE
+    here is my insta page</p>
+ <a href="https://www.instagram.com/bizarrearts0/"></a>
+<img src="https://www.instagram.com/p/CJ5HKD1Jqs5/"
+</body>
